first-heading.html services.html

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,20 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="first-heading mt-5">
+    <div class="row">
+        <div class="col-8">
+            <div class="heading mt-5 ">
+                <h2 style="display: inline-block; font-size: 50px;">This First Heading</h2>
+                <h2 style="float:right; color: gray; font-size: 50px;">Will Catch Your Eye</h2>
+                <p style="font-size: 23px;">Donec ullamcorper nulla non metus ausctor fringilla. Vestibulum id
+                ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque
+                nisl<br>consectetur. Fusce dapibud, tellus ac cursus commodo.
+            </p>
+        </div>
+    </div>
+    <div class="col-4 mt-5">
+        <img style="width: 27rem;"
+            src="https://github.com/Navarroseb/exercise-collaborative-html-website/blob/master/website/assets/img/1.jpg?raw=true"
+            class="rounded-circle" alt="...">
+        </div>
+    </div>
+</div>
