--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,20 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="services.html mt-5">
+    <div class="row mt-5">
+        <div class="col-4">
+            <img style="width:26rem ;"
+            src="https://github.com/Navarroseb/exercise-collaborative-html-website/blob/master/website/assets/img/2.jpg?raw=true"
+            class="rounded-circle" alt="...">
+        </div>
+        <div class="col-8">
+            <div class="second-heading">
+                <h2 style="display:inline-block; font-size: 49px;">The Second Heading</h2>
+                <h2 style="float: right; font-size: 49px; color: gray;">is Pretty cool too.</h2>
+                <p style="font-size: 23px;">Donec ullamcorper nulla non metus ausctor fringilla. Vestibulum id
+                ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque
+                nisl consectetur. Fusce dapibud, tellus ac cursus commodo.
+            </p>
+        </div>
+    </div>
+</div>
+</div>
