--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,33 @@
-<!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div>
+    <div class="row bg-white">
+        <h1>Porfolio</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+         <div class="col-4">
+             <div class="card">
+                 <img src="https://github.com/Navarroseb/exercise-collaborative-html-website/blob/master/website/assets/img/big-project-image.png?raw=true" class="card-img-top" alt="...">
+                     <div class="card-body">
+                          <h5 class="card-title text-primary class">Project Name</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                     </div>
+             </div>
+         </div>
+         <div class="col-4">
+             <div class="card">
+                 <img src="https://github.com/Navarroseb/exercise-collaborative-html-website/blob/master/website/assets/img/big-project-image.png?raw=true" class="card-img-top" alt="...">
+                     <div class="card-body">
+                          <h5 class="card-title text-primary class">Project Name</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                     </div>
+             </div>
+         </div>
+         <div class="col-4">
+             <div class="card">
+                 <img src="https://github.com/Navarroseb/exercise-collaborative-html-website/blob/master/website/assets/img/big-project-image.png?raw=true" class="card-img-top" alt="...">
+                     <div class="card-body">
+                          <h5 class="card-title text-primary class">Project Name</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                     </div>
+             </div>
+         </div>
+    </div>
+ </div>
