--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,19 +1,23 @@
 <div class="container-fluid">
-<div class="row bg-white p-3">
-<h1>Contact</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-<form class="Contact w-50 bg-light align-center">
-<fieldset eneable>
-  <div class="mb-3">
-    <label for="disabledTextInput" class="form-label">Your E-mail</label>
-    <input type="text" id="disabledTextInput" class="form-control" placeholder="Your email">
+  <div class="row bg-white p-3">
+    <h1>Contact</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
+    <form class="Contact w-50 bg-light mx-auto">
+      <fieldset eneable>
+        <div class="mb-3">
+          <label for="disabledTextInput" class="form-label">Your E-mail</label>
+          <input type="text" id="disabledTextInput" class="form-control" placeholder="Your email">
+        </div>
+        <div class="mb-3">          
+          <label for="disabledTextInput" class="form-label">Your message</label>
+          <textarea id="disabledTextInput" class="form-control" rows="3"
+            placeholder="Please enter your message here..."></textarea>
+        </div class="mb-3">
+        <button type="submit" class="btn btn-primary float-end">Submit</button>
+      </fieldset>
+    </form>
   </div>
-  <div class="mb-3">
-    <label for="disabledTextInput" class="form-label">Your message</label>
-    <input type="text" id="disabledTextInput" class="form-control" placeholder="Please enter your message here...">
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</fieldset>
-</form>
-</div>
 </div>
